tests/golden/parse_errors/map_trailing_comma.cd
let values = {"a": 1,};
