tests/golden/parse_errors/map_trailing_comma.err
Parse error at 1:22: expected expression
  let values = {"a": 1,};
                       ^
Parse error at 1:23: expected expression
  let values = {"a": 1,};
                        ^
